[gd_scene load_steps=20 format=2]

[ext_resource path="res://single-sprites/objects/UI/select_champion_dude_up.png" type="Texture" id=1]
[ext_resource path="res://single-sprites/objects/UI/select_champion_dude_idle.png" type="Texture" id=2]
[ext_resource path="res://single-sprites/objects/UI/select_champion_dude_hover.png" type="Texture" id=3]
[ext_resource path="res://single-sprites/objects/UI/select_champion_owlet_idle.png" type="Texture" id=4]
[ext_resource path="res://single-sprites/objects/UI/select_champion_owlet_hover.png" type="Texture" id=5]
[ext_resource path="res://single-sprites/objects/UI/select_champion_pink_up.png" type="Texture" id=6]
[ext_resource path="res://single-sprites/objects/UI/select_champion_pink_hover.png" type="Texture" id=7]
[ext_resource path="res://single-sprites/objects/UI/select_champion_pink_idle.png" type="Texture" id=8]
[ext_resource path="res://single-sprites/objects/UI/select_champion_owlet_up.png" type="Texture" id=9]
[ext_resource path="res://single-sprites/objects/UI/header.png" type="Texture" id=10]
[ext_resource path="res://single-sprites/objects/UI/button_2x_hover.png" type="Texture" id=11]
[ext_resource path="res://single-sprites/objects/UI/button_2x.png" type="Texture" id=12]
[ext_resource path="res://single-sprites/objects/UI/button_2x_up.png" type="Texture" id=13]
[ext_resource path="res://scripts/select_scene.gd" type="Script" id=14]
[ext_resource path="res://single-sprites/objects/UI/button_2x_disabled.png" type="Texture" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="select" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="VBoxContainer" parent="."]
margin_right = 189.0
margin_bottom = 324.0
size_flags_horizontal = 3

[node name="up" type="MarginContainer" parent="left"]
margin_right = 189.0
margin_bottom = 63.0
size_flags_vertical = 3

[node name="middle" type="MarginContainer" parent="left"]
margin_top = 67.0
margin_right = 189.0
margin_bottom = 256.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="dude" type="TextureButton" parent="left/middle"]
margin_left = 15.0
margin_top = 15.0
margin_right = 174.0
margin_bottom = 174.0
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="down" type="MarginContainer" parent="left"]
margin_top = 260.0
margin_right = 189.0
margin_bottom = 324.0
size_flags_vertical = 3

[node name="center" type="VBoxContainer" parent="."]
margin_left = 193.0
margin_right = 382.0
margin_bottom = 324.0
size_flags_horizontal = 3

[node name="up" type="MarginContainer" parent="center"]
margin_right = 189.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( -464.651, -28.9432 )
size_flags_vertical = 3
custom_constants/margin_top = 15

[node name="titleButton" type="TextureButton" parent="center/up"]
margin_top = 15.0
margin_right = 189.0
margin_bottom = 63.0
disabled = true
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="nameLabel" type="Label" parent="center/up/titleButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.392157, 0.0784314, 1 )
text = "Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="middle" type="MarginContainer" parent="center"]
margin_top = 67.0
margin_right = 189.0
margin_bottom = 256.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="owlet" type="TextureButton" parent="center/middle"]
margin_left = 15.0
margin_top = 15.0
margin_right = 174.0
margin_bottom = 174.0
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="down" type="MarginContainer" parent="center"]
margin_top = 260.0
margin_right = 189.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( -397.276, -100.713 )
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="startButton" type="TextureButton" parent="center/down"]
margin_left = 40.0
margin_right = 149.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="center/down/startButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="VBoxContainer" parent="."]
margin_left = 386.0
margin_right = 576.0
margin_bottom = 324.0
size_flags_horizontal = 3

[node name="up" type="MarginContainer" parent="right"]
margin_right = 190.0
margin_bottom = 63.0
size_flags_vertical = 3

[node name="middle" type="MarginContainer" parent="right"]
margin_top = 67.0
margin_right = 190.0
margin_bottom = 256.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="pink" type="TextureButton" parent="right/middle"]
margin_left = 15.0
margin_top = 15.0
margin_right = 175.0
margin_bottom = 174.0
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="down" type="MarginContainer" parent="right"]
margin_top = 260.0
margin_right = 190.0
margin_bottom = 324.0
size_flags_vertical = 3

[connection signal="button_down" from="left/middle/dude" to="." method="_on_dude_button_down"]
[connection signal="button_down" from="center/middle/owlet" to="." method="_on_owlet_button_down"]
[connection signal="button_down" from="center/down/startButton" to="." method="_on_startButton_button_down"]
[connection signal="button_down" from="right/middle/pink" to="." method="_on_pink_button_down"]
